Fixed horizontal scrollbar issue

--- a/style.css
+++ b/style.css
@@ -4,6 +4,7 @@ body {
   cursor: default;
   font-family: Copse, serif;
   margin: 0;
+	overflow-x: hidden;
 }
 
 header {
